--- a/src/components/carrito.css
+++ b/src/components/carrito.css
@@ -1,10 +1,12 @@
 .carrito{
     height: 50px;
     width: 50px;
+    color: white;
 }
 
 .carritodiv{
   display: flex;
   align-items: center;
   gap: 8px; 
+     color: white;
 }
